this joke is too difficult to understand

--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -52,7 +52,7 @@ __('String to translate')
 переменных:
 
 ```javascript
-__('{name}, how are you?', {name: document.body.tagName}) // шутко ггг
+__('{name}, how are you?', {name: document.body.tagName})
 ```
 
 Тут есть небольшая опасность: что делать, если надо честно вывести фигурную
