more links to repo

--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -144,8 +144,8 @@ rm $MO
 
 ## Что дальше
 
-Дальше вы берëте все нужные файлики из [репозитория][2] или устанавливаете пакет
-`puttext` в NPM, добавляете себе в загружающийся джаваскрипт `puttext.js`,
+Дальше вы берëте все нужные файлики из [репозитория][puttext] или устанавливаете
+пакет `puttext` в NPM, добавляете себе в загружающийся джаваскрипт `puttext.js`,
 помечаете строки, генерируете исходный `<lang>.po`, шлëте его переводчикам (у
 меня есть подозрение, что как минимум на 1 язык может и программист перевести,
 для проверки, что все строки помечены), и файл с переводами компилируете в
@@ -154,4 +154,7 @@ rm $MO
 У проекта еще и README есть, тоже может помочь - но если и его не хватает,
 пишите вопросы здесь, или на гитхабе, или мне в мыло. Enjoy!
 
-[2]: https://github.com/socialabs/puttext
+И на всякий случай, еще раз, если вдруг вы всë поняли сразу и проскроллили текст
+без чтения, **ссылка на репозиторий**: [puttext][].
+
+[puttext]: https://github.com/socialabs/puttext
