more links to repo, harr

--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -154,6 +154,8 @@ rm $MO
 У проекта еще и README есть, тоже может помочь - но если и его не хватает,
 пишите вопросы здесь, или на гитхабе, или мне в мыло. Enjoy!
 
+## Еще раз, ссылка
+
 И на всякий случай, еще раз, если вдруг вы всë поняли сразу и проскроллили текст
 без чтения, **ссылка на репозиторий**: [puttext][].
 
