--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -140,7 +140,7 @@ rm $MO
 текст? Тогда пришлось бы писать логику объединения с новыми строками, и не было
 бы PoEdit и прочих редакторов (`po-mode` в Емаксе, например). Быть совместимым с
 де-факто стандартом (у нормальных людей - я смотрю на тебя, .NET) - удобно. Даже
-если приходится потратить немного возни на настройку.
+если приходится потратить немного времени на настройку.
 
 ## Что дальше
 
