update i18n post to reflect po2json appearance

--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -119,19 +119,12 @@ $ echo '' | xgettext -C --force - -o -
 ### Can I haz JSON
 
 И в конце нужно скомпилировать наш .po-файлик и получить результирующий JSON,
-чтоб грузить его в приложении. Мы пользуемся Make и правилом, которое делает
-что-то типа такого:
+чтоб грузить его в приложении. В комплекте идëт `po2json.js`, так что никаких
+проблем:
 
 ```shell
-MO=$(mktemp /tmp/mo.XXXX)
-msgfmt -cv -o $MO <path/to/lang.po>
-mo2json.py $MO > <path/to/lang.json>
-rm $MO
+$ ./po2json.js [path/to/lang.po] > [path/to/lang.json]
 ```
-
-К сожалению, модуль `gettext` из Python не умеет читать `.po`, а делать
-зависимости на еще какой-то модуль мне лень, поэтому нужно компилировать в `.mo`
-сначала.
 
 ## Зачем всë это
 
