mark favorites and toggle to hide others

--- a/src/en/2013/i18n.md
+++ b/src/en/2013/i18n.md
@@ -1,6 +1,7 @@
 title: Translating in-browser applications
 date: 2013-04-24
 tags: i18n, javascript
+favorite: true
 ----
 
 Earlier or later, if an application is not targeted on an English-speaking
