--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -18,7 +18,7 @@ tags: i18n, javascript
 
 Очевидно, с такими проблемами мириться было нельзя и была рождена новая
 библиотека, которая получила говорящее имя
-[puttext](https://github.com/socialabs/puttext), и API, который на gettext
+[puttext](https://github.com/piranha/puttext), и API, который на gettext
 походит только издалека. Не думаю, что кого-либо этот факт взволнует.
 
 *Маленькое отступление*. Из фич, которые предоставляет геттекст, я забил на
@@ -152,4 +152,4 @@ $ ./po2json.js [path/to/lang.po] > [path/to/lang.json]
 И на всякий случай, еще раз, если вдруг вы всë поняли сразу и проскроллили текст
 без чтения, **ссылка на репозиторий**: [puttext][].
 
-[puttext]: https://github.com/socialabs/puttext
+[puttext]: https://github.com/piranha/puttext
