--- a/src/en/2013/i18n.md
+++ b/src/en/2013/i18n.md
@@ -22,7 +22,7 @@ It's not bad, but I didn't like its size (more than a thousand lines), obscure
 relationship with jQuery and lack of the infrastructure.
 
 Obviously, I couldn't live with those outrageous problems and I had to write a
-new library. It's called [puttext](https://github.com/socialabs/puttext) and has
+new library. It's called [puttext](https://github.com/piranha/puttext) and has
 API which looks completely unlike gettext (I don't think anybody is worried
 about that).
 
@@ -156,4 +156,4 @@ enough, ask questions here, or on Github, or mail me. Enjoy!
 Just in case you grasped idea from the beginning of this post and skipped rest,
 **link to repository**: [puttext][].
 
-[puttext]: https://github.com/socialabs/puttext
+[puttext]: https://github.com/piranha/puttext
