--- a/src/blog/2013/i18n.md
+++ b/src/blog/2013/i18n.md
@@ -1,7 +1,7 @@
 title: Переводы браузерных приложений
 date: 2013-04-16
 tags: i18n, javascript
-alternate: <link rel="alternate" hreflang="en" href="../i18n-en/" />
+alternate: <link rel="alternate" hreflang="ru" href="https://solovyov.net/blog/2013/i18n/" /> <link rel="alternate" hreflang="en" href="https://solovyov.net/blog/2013/i18n-en/" />
 ----
 
 Рано или поздно, если приложение ориентировано не на англоязычный рынок, всем
